--- a/public_html/index.html
+++ b/public_html/index.html
@@ -115,7 +115,8 @@ img.header {
                 <div class="intro-heading" > 6ª Semana de Química</div>
                 <div class="intro-lead-in">
                   08 a 11 de Outubro - IFRN Campus Currais Novos <br/>
-                  Prazo para submissão de trabalhos: 17 de Agosto <br/> 
+                  <span style="text-decoration: line-through;">Prazo para submissão de trabalhos: 10 de Agosto</span> <br/> 
+                  Prazo para submissão de trabalhos: 17 de Agosto <br/>
                   7 de Setembro: envio das cartas de aceite</div>
                 <a href="https://www.eventbrite.com/e/semana-de-quimica-ifrn-registration-48253304934?ref=ecount" class="page-scroll btn btn-xl">Realizar Inscrição</a>
 				        <a href="https://easychair.org/conferences/?conf=6semquimifrn" target="_blank" class="page-scroll btn btn-xl" >Submeter trabalho</a>
