Redução de tamanho da background

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -105,7 +105,7 @@ img.header {
 
     <!-- Header -->
     <header>
-        <img class="background" src="img/background.png" alt="Logo sexta semana de Química" width="300" height="300">
+        <img class="background" src="img/background-min.png" alt="Logo sexta semana de Química" width="300" height="300">
 
         <div class="container">
 
@@ -115,7 +115,7 @@ img.header {
                 <div class="intro-heading" > 6ª Semana de Química</div>
                 <div class="intro-lead-in">
                   08 a 11 de Outubro - IFRN Campus Currais Novos <br/>
-                  <span style="text-decoration: line-through;">Prazo para submissão de trabalhos: 10 de Agosto</span> <br/> 
+                  <span style="text-decoration: line-through;">Prazo para submissão de trabalhos: 10 de Agosto</span> <br/>
                   Prazo para submissão de trabalhos: 17 de Agosto <br/>
                   7 de Setembro: envio das cartas de aceite</div>
                 <a href="https://www.eventbrite.com/e/semana-de-quimica-ifrn-registration-48253304934?ref=ecount" class="page-scroll btn btn-xl">Realizar Inscrição</a>
