Inclusão dos comitês organizador e de programa. Alteração nos e-mails de contato.

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -730,68 +730,88 @@ img.header {
          	        <hr class="primary">
                 </div>
             </div>
-			<table>
-			<tr>
-			<td>
-				<p class="btext-muted"> - Coordenação </p>
-				<ul>
-					<li> Francisco Pio de Souza </li>
-				</ul>
-<!--
-				<p class="btext-muted"> - Apoio </p>
-				<ul>
-					<li> Eliezio Soares de Sousa Neto </li>
-				</ul>
 
-				<p class="btext-muted"> - Infraestrutura </p>
-				<ul>
-					<li> ... </li>
-				</ul>
-      -->
-			</td>
-<!--
-
-			<td>
-				<p class="btext-muted">
-				<ul>
-					<li> ... </li>
-				</ul>
-				<p class="btext-muted"> - Divulgação </p>
-				<ul>
-					<li> ...</li>
-				</ul>
-				<p class="btext-muted"> - Comitê Científico </p>
-				<ul>
-					<li> ... </li>
-				</ul>
-			</td>
-			<td>
-				<ul>
-
-					<li> ... </li>
-				</ul>
-			</td>
-			<td>
-				<ul>
-					<li> ... </li>
-				</ul>
-				<p class="btext-muted"> - Secretaria </p>
-				<ul>
-					<li> ... </li>
-				</ul>
-				<p class="btext-muted"> - Cultural </p>
-				<ul>
-					<li> ... </li>
-					<br>
-					<br>
-					<br>
-					<br>
-					<br>
-				</ul>
-			</td>
-    -->
-			</tr>
-			</table>
+            <style type="text/css">
+              #organizacao{text-align: center;}
+              .tg  {border:none; margin-left: auto; margin-right: auto;}
+              .tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border:none; text-align: center;}
+              .tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border:none;overflow:hidden;word-break:normal;}
+              .tg .tg-cpu2{border:none;vertical-align:top}
+              .tg .tg-mqa1{font-weight:bold;border:none;text-align:center;vertical-align:top}
+              .tg .tg-semqui{width: 30px; border:none;}
+            </style>
+            <table class="tg">
+              <tr>
+                <th class="tg-mqa1">Comitê Organizador</th>
+                <th class="tg-semqui"></th>
+                <th class="tg-mqa1">Comitê de Programa</th>
+              </tr>
+              <tr>
+                <td class="tg-cpu2">Pio Antas</td>
+                <td class="tg-semqui"></td>
+                <td class="tg-cpu2">Pio Antas</td>
+              </tr>
+              <tr>
+                <td class="tg-cpu2">Daniela Cunha Terto</td>
+                <td class="tg-semqui"></td>
+                <td class="tg-cpu2">Daniela Cunha Terto</td>
+              </tr>
+              <tr>
+                <td class="tg-cpu2">Eliezio Soares de Sousa Neto</td>
+                <td class="tg-semqui"></td>
+                <td class="tg-cpu2">Luciana Bertini</td>
+              </tr>
+              <tr>
+                <td class="tg-cpu2">Gutto Raffyson Silva de Freitas</td>
+                <td class="tg-semqui"></td>
+                <td class="tg-cpu2">Danyelle Medeiros de Araújo</td>
+              </tr>
+              <tr>
+                <td class="tg-cpu2">Jardel Ricardo Pereira de França</td>
+                <td class="tg-semqui"></td>
+                <td class="tg-cpu2">Jardel Ricardo Pereira de França</td>
+              </tr>
+              <tr>
+                <td class="tg-cpu2">Livia Cristina dos Santos</td>
+                <td class="tg-semqui"></td>
+                <td class="tg-cpu2">Livia Cristina dos Santos</td>
+              </tr>
+              <tr>
+                <td class="tg-cpu2">Maura Costa Bezerra</td>
+                <td class="tg-semqui"></td>
+                <td class="tg-cpu2">Gutto Raffyson Silva de Freitas</td>
+              </tr>
+              <tr>
+                <td class="tg-cpu2">Michelle Menezes de Oliveira</td>
+                <td class="tg-semqui"></td>
+                <td class="tg-cpu2">Leonardo Alcantara Alves</td>
+              </tr>
+              <tr>
+                <td class="tg-cpu2">Rafael Augusto Ventura</td>
+                <td class="tg-semqui"></td>
+                <td class="tg-cpu2">Rafael Augusto Ventura</td>
+              </tr>
+              <tr>
+                <td class="tg-cpu2">Sandro Dutra de Andrade</td>
+                <td class="tg-semqui"></td>
+                <td class="tg-cpu2">Sandro Dutra de Andrade</td>
+              </tr>
+              <tr>
+                <td class="tg-cpu2"></td>
+                <td class="tg-semqui"></td>
+                <td class="tg-cpu2">Danilo Braz</td>
+              </tr>
+              <tr>
+                <td class="tg-cpu2"></td>
+                <td class="tg-semqui"></td>
+                <td class="tg-cpu2">Allan Dantas</td>
+              </tr>
+              <tr>
+                <td class="tg-cpu2"></td>
+                <td class="tg-semqui"></td>
+                <td class="tg-cpu2">Bruno Barbalho</td>
+              </tr>
+            </table>
         </div>
     </section>
 
@@ -812,7 +832,7 @@ img.header {
 							<li><a href="http://hebrom.ifrn.edu.br/">
 							<i class="glyphicon glyphicon-envelope"></i></a>
 							</li>
-							pio.antas@ifrn.edu.br
+							<br/>jardel.franca@ifrn.edu.br | sandro.andrade@ifrn.edu.br <br/> livia.santos@ifrn.edu.br
 						</a>
 						</ul>
 					</div>
