--- a/public_html/index.html
+++ b/public_html/index.html
@@ -731,15 +731,7 @@ img.header {
                 </div>
             </div>
 
-            <style type="text/css">
-              #organizacao{text-align: center;}
-              .tg  {border:none; margin-left: auto; margin-right: auto;}
-              .tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border:none; text-align: center;}
-              .tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border:none;overflow:hidden;word-break:normal;}
-              .tg .tg-cpu2{border:none;vertical-align:top}
-              .tg .tg-mqa1{font-weight:bold;border:none;text-align:center;vertical-align:top}
-              .tg .tg-semqui{width: 30px; border:none;}
-            </style>
+
             <table class="tg">
               <tr>
                 <th class="tg-mqa1">Comitê Organizador</th>
@@ -1498,13 +1490,12 @@ img.header {
     <script src="js/bootstrap.min.js"></script>
 
     <!-- Plugin JavaScript -->
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
     <script src="js/classie.js"></script>
     <script src="js/cbpAnimatedHeader.js"></script>
 
     <!-- Contact Form JavaScript -->
     <script src="js/jqBootstrapValidation.js"></script>
-    <script src="js/contact_me.js"></script>
 
     <!-- Custom Theme JavaScript -->
     <script src="js/agency.js"></script>
