--- a/public_html/index.html
+++ b/public_html/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>VI Semana de Química</title>
+    <title> - VI Semana de Química</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
