--- a/public_html/index.html
+++ b/public_html/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title> - VI Semana de Química</title>
+    <title>VI Semana de Química</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -140,6 +140,9 @@ img.header {
             <p class="text-muted"> A Semana de Química do Instituto Federal de Educação, Ciência e Tecnologia do Rio Grande do Norte - IFRN tem se realizado institucionalmente no âmbito dos
               Cursos Superiores de Licenciatura e tecnologia em Química  desde 2013. Tornou-se um evento anual e obrigatório no calendário de nossa instituição. Tendo sido realizado por cinco
               anos consecutivos e, em 2018, indo para sua 6ª edição, A Semana de Química será sediada pelo campus Currais Novos do IFRN, pioneiro em sua realização. As edições anteriores foram:
+
+
+              "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
             </div>
 
         </div>
